--- a/hospitalManagementSystem/hospitalManagementSystem.csproj
+++ b/hospitalManagementSystem/hospitalManagementSystem.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HospitalLibrary">
+      <HintPath>..\HospitalLibrary\bin\Debug\HospitalLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
