Add NewDoctor ComboBoxDepartment DropDown functionality

--- a/HospitalLibrary/HospitalLibrary.csproj
+++ b/HospitalLibrary/HospitalLibrary.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Department.cs" />
     <Compile Include="Doctor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
