Add NewDoctor NationalityComboBox functionality

--- a/HospitalLibrary/HospitalLibrary.csproj
+++ b/HospitalLibrary/HospitalLibrary.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="Department.cs" />
     <Compile Include="Doctor.cs" />
+    <Compile Include="Nationality.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
