--- a/hospitalManagementSystem/hospitalManagementSystem.csproj
+++ b/hospitalManagementSystem/hospitalManagementSystem.csproj
@@ -73,6 +73,11 @@
     <Compile Include="HospitalMain.Designer.cs">
       <DependentUpon>HospitalMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="hospitalManagementSystemDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>hospitalManagementSystemDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="NewDoctor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +128,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="hospitalManagementSystemDataSet.xsc">
+      <DependentUpon>hospitalManagementSystemDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="hospitalManagementSystemDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>hospitalManagementSystemDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="hospitalManagementSystemDataSet.xss">
+      <DependentUpon>hospitalManagementSystemDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
