--- a/HospitalLibrary/HospitalLibrary.csproj
+++ b/HospitalLibrary/HospitalLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DepartmentDoctor.cs" />
     <Compile Include="DepartmentStaff.cs" />
     <Compile Include="Doctor.cs" />
+    <Compile Include="DoctorShifts.cs" />
     <Compile Include="Nationality.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
