--- a/hospitalManagementSystem/hospitalManagementSystem.csproj
+++ b/hospitalManagementSystem/hospitalManagementSystem.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssignDoctorShifts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AssignDoctorShifts.Designer.cs">
+      <DependentUpon>AssignDoctorShifts.cs</DependentUpon>
+    </Compile>
     <Compile Include="CommonFormOperation.cs" />
     <Compile Include="DoctorShifts.cs">
       <SubType>Form</SubType>
@@ -107,6 +113,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shifts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shifts.Designer.cs">
+      <DependentUpon>Shifts.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AssignDoctorShifts.resx">
+      <DependentUpon>AssignDoctorShifts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DoctorShifts.resx">
       <DependentUpon>DoctorShifts.cs</DependentUpon>
     </EmbeddedResource>
