--- a/hospitalManagementSystem/hospitalManagementSystem.csproj
+++ b/hospitalManagementSystem/hospitalManagementSystem.csproj
@@ -58,6 +58,12 @@
     <Compile Include="AssignStaffShifts.Designer.cs">
       <DependentUpon>AssignStaffShifts.cs</DependentUpon>
     </Compile>
+    <Compile Include="BookAppointment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BookAppointment.Designer.cs">
+      <DependentUpon>BookAppointment.cs</DependentUpon>
+    </Compile>
     <Compile Include="CommonFormOperation.cs" />
     <Compile Include="DoctorShifts.cs">
       <SubType>Form</SubType>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AssignStaffShifts.resx">
       <DependentUpon>AssignStaffShifts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BookAppointment.resx">
+      <DependentUpon>BookAppointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DoctorShifts.resx">
       <DependentUpon>DoctorShifts.cs</DependentUpon>
