--- a/HospitalLibrary/HospitalLibrary.csproj
+++ b/HospitalLibrary/HospitalLibrary.csproj
@@ -46,7 +46,7 @@
     <Compile Include="DepartmentStaff.cs" />
     <Compile Include="Doctor.cs" />
     <Compile Include="DoctorShiftsHL.cs" />
-    <Compile Include="Nationality.cs" />
+    <Compile Include="NationalityHL.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff.cs" />
