--- a/hospitalManagementSystem/hospitalManagementSystem.csproj
+++ b/hospitalManagementSystem/hospitalManagementSystem.csproj
@@ -68,12 +68,6 @@
     <Compile Include="BookAppointment.Designer.cs">
       <DependentUpon>BookAppointment.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChangePassowrd.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChangePassowrd.Designer.cs">
-      <DependentUpon>ChangePassowrd.cs</DependentUpon>
-    </Compile>
     <Compile Include="CommonFormOperation.cs" />
     <Compile Include="User.cs">
       <SubType>Form</SubType>
@@ -159,12 +153,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shifts.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Shifts.Designer.cs">
-      <DependentUpon>Shifts.cs</DependentUpon>
-    </Compile>
     <Compile Include="StaffDepartment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,9 +173,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BookAppointment.resx">
       <DependentUpon>BookAppointment.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ChangePassowrd.resx">
-      <DependentUpon>ChangePassowrd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="User.resx">
       <DependentUpon>User.cs</DependentUpon>
@@ -235,9 +220,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Shifts.resx">
-      <DependentUpon>Shifts.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="StaffDepartment.resx">
       <DependentUpon>StaffDepartment.cs</DependentUpon>
     </EmbeddedResource>
@@ -329,6 +311,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\infrastructure-211.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MAIN PIC.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
